# recall-engine

./: .gitignore  README.md  pyproject.toml
.serena/: project.yml
.spec/: requirement.md
src/recall_engine/: agents.py  cli.py  completion.py  config.py  doctor.py  drive.py  launcher.py  mcp_server.py  mcp_supervisor.py  repo.py  search.py  skill.py  template_renderer.py
src/recall_engine/templates/: SKILL.md  SKILL.md.j2
src/recall_engine/templates/resources/: notes_index_description.md.j2
src/recall_engine/templates/rules/: mcp_server_instructions.md  multilingual_keyword_expansion.md
tests/: test_cli.py  test_completion.py  test_config.py  test_doctor.py  test_drive.py  test_launcher.py  test_mcp_config.py  test_mcp_server.py  test_mcp_supervisor.py  test_repo.py  test_search.py  test_skill.py
