[project]
name = "recall-engine"
version = "0.1.0"
description = "Thin launcher engine that wraps an agent CLI (claude/codex/pi/gemini) with a knowledge repo skill and syncs Markdown notes with Google Drive."
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
]

[project.scripts]
recall-engine = "recall_engine.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recall_engine"]
